Upgrade AspectJ: 1.9.0.20180322111500